# FATE-ARM64

./: README.md  docker-compose-eggroll.yml
build-arm/: requirements.txt
build-arm/docker-build/: .env  build_cluster_docker.sh
build-arm/docker-build/docker/base/: Dockerfile
build-arm/docker-build/docker/modules/eggroll/: Dockerfile
build-arm/docker-build/docker/modules/fateboard/: Dockerfile
build-arm/docker-build/docker/python-38-ubuntu/: Dockerfile
build-arm/docker-build/docker/python-38-ubuntu/libsm3py-0.0.1/: Cargo.toml  PKG-INFO  README.md  setup.py
build-arm/docker-build/docker/python-38-ubuntu/libsm3py-0.0.1/libsm3py.egg-info/: SOURCES.txt
build-arm/docker-build/docker/python-38-ubuntu/libsm3py-0.0.1/src/: lib.rs
build-arm/package-build/: build.sh
mac-os/: docker_deploy.sh  generate_config.sh
